# coco-toolbox

./: .gitignore  README.md  pyproject.toml
coco/: cli.py
coco/tools/: __init__.py  tools.py
coco/utils/: logging.py
cocoa/: cli.py
cocoa/tools/: __init__.py  schema_explainer.py  tools.py
cocoa/utils/: __init__.py
cocoa/utils/config/: config.py
docs/assets/: logo.ai
example/: client.py
test/: conftest.py  test_basic.py
test/resources/daytrader8/: pom.xml
